--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <title>pixelart</title>
+    <title>px</title>
     <style>
       body,
       html {
@@ -32,12 +32,26 @@
         width: 100vw;
       }
 
-      .settings {
+      .sidebar {
         background-color: white;
         border: 1px solid black;
+        left: 0.25rem;
+        min-width: 250px;
         position: absolute;
-        right: 0.25rem;
         top: 0.25rem;
+      }
+
+      .sidebar-separator {
+        background-color: black;
+        border: none;
+        height: 1px;
+        margin: 0;
+      }
+
+      summary {
+        cursor: pointer;
+        padding: 0.25rem 0.5rem;
+        user-select: none;
       }
 
       .setting {
@@ -48,18 +62,9 @@
         padding: 0.25em 0.5em;
       }
 
-      .colors {
-        background-color: white;
-        border: 1px solid black;
-        left: 0.25rem;
-        position: absolute;
-        top: 0.25rem;
-      }
-
-      summary {
-        cursor: pointer;
-        padding: 0.25rem 0.5rem;
-        user-select: none;
+      .colors,
+      .settings {
+        padding: 0.5em 0;
       }
 
       .color {
@@ -76,26 +81,57 @@
         height: 1em;
         width: 1em;
       }
+
+      file-drop:after {
+        background-color: rgba(255, 235, 59, 0.2);
+        border: 2px dashed #263238;
+        border-radius: 10px;
+        bottom: 10px;
+        content: '';
+        display: block;
+        left: 10px;
+        opacity: 0;
+        pointer-events: none;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        transform: scale(0.95);
+        transition: all 0.2s ease-in;
+        transition-property: transform, opacity;
+      }
+
+      file-drop.drop-valid:after {
+        opacity: 1;
+        transform: scale(1);
+        transition-timing-function: ease-out;
+      }
     </style>
   </head>
   <body>
     <canvas id="image-canvas"></canvas>
-    <canvas id="zoom-canvas"></canvas>
-    <aside class="colors">
-      <details>
-        <summary>Colors</summary>
-        <div id="colors"></div>
-      </details>
-    </aside>
-    <aside class="settings">
-      <details>
-        <summary>Settings</summary>
-        <div class="setting">
-          <input id="grid-size" min="2" type="range" value="32" />
-          <label for="grid-size">Grid Size</label>
-        </div>
-      </details>
-    </aside>
+    <file-drop accept="image/*" id="file-drop-target">
+      <canvas id="zoom-canvas"></canvas>
+      <aside class="sidebar">
+        <details>
+          <summary>Colors</summary>
+          <div class="colors" id="colors"></div>
+        </details>
+        <hr class="sidebar-separator" />
+        <details>
+          <summary>Settings</summary>
+          <div class="settings">
+            <div class="setting">
+              <input id="grid-size" min="2" type="range" value="16" />
+              <label for="grid-size">Grid Size</label>
+            </div>
+          </div>
+        </details>
+      </aside>
+    </file-drop>
+    <script
+      src="https://unpkg.com/file-drop-element@0.2.0/dist/filedrop.mjs"
+      type="module"
+    ></script>
     <script src="main.js" type="module"></script>
   </body>
 </html>
