--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
       #zoom-canvas {
         height: 100vh;
+        touch-action: none;
         width: 100vw;
       }
 
@@ -80,6 +81,10 @@
         display: inline-block;
         height: 1em;
         width: 1em;
+      }
+
+      file-drop {
+        touch-action: none;
       }
 
       file-drop:after {
