--- a/app/index.html
+++ b/app/index.html
@@ -37,5 +37,14 @@
       </aside>
     </file-drop>
     <script src="main.js" type="module"></script>
+    <script>
+      // Check that service workers are supported
+      if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
   </body>
 </html>
