--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
           <summary>Settings</summary>
           <div class="settings">
             <div class="setting">
-              <input id="grid-size" min="2" type="range" value="32" />
+              <input id="grid-size" min="2" step="1" type="range" value="32" />
               <label for="grid-size">Grid Size</label>
             </div>
           </div>
