--- a/app/index.html
+++ b/app/index.html
@@ -20,22 +20,62 @@
     <file-drop accept="image/*" id="file-drop-target">
       <canvas id="zoom-canvas"></canvas>
       <aside class="sidebar">
-        <details>
-          <summary>Colors</summary>
-          <div class="colors" id="colors"></div>
-        </details>
-        <hr class="sidebar-separator" />
+        <div class="settings">
+          <label>
+            Zoom %
+            <input id="zoom" readonly size="4" type="number" value="1" />
+          </label>
+        </div>
         <details>
           <summary>Settings</summary>
           <div class="settings">
             <div class="setting">
-              <input id="grid-size" min="2" step="1" type="range" value="32" />
-              <label for="grid-size">Grid Size</label>
+              <div class="setting-label">
+                <label for="grid-size">Grid size</label>
+                <input for="grid-size" is="range-number" />
+              </div>
+              <input id="grid-size" min="0" step="1" type="range" value="0" />
+            </div>
+            <hr class="sidebar-separator" />
+            <div class="setting">
+              <div class="setting-label">
+                <label for="max-colors">Max colors</label>
+                <input for="max-colors" is="range-number" />
+              </div>
+              <input
+                id="max-colors"
+                max="32"
+                min="2"
+                step="1"
+                type="range"
+                value="16"
+              />
+            </div>
+            <hr class="sidebar-separator" />
+            <div class="setting">
+              <div class="setting-label">
+                <label for="dithering">Dithering</label>
+                <input for="dithering" is="range-number" />
+              </div>
+              <input
+                id="dithering"
+                max="1"
+                min="0"
+                step="0.01"
+                type="range"
+                value="1"
+              />
             </div>
           </div>
         </details>
+        <hr class="sidebar-separator" />
+        <details>
+          <summary>Colors</summary>
+          <div class="colors" id="colors"></div>
+        </details>
       </aside>
     </file-drop>
+    <script src="range-number.js" type="module"></script>
     <script src="main.js" type="module"></script>
     <script>
       // Check that service workers are supported
