test pinch on mobile

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <file-drop accept="image/*" id="file-drop-target">
       <canvas id="zoom-canvas"></canvas>
       <aside class="sidebar">
+        <pre id="debug" style="font-size: 10px"></pre>
         <div class="settings">
           <label>
             Zoom %
