clean up from pinch-zoom experiment
also add polyfill for custom-element builtins in safari

--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,13 @@
     />
     <link href="styles.css" rel="stylesheet" />
     <title>px</title>
+    <script src="https://unpkg.com/@ungap/custom-elements"></script>
   </head>
   <body>
     <canvas id="image-canvas"></canvas>
     <file-drop accept="image/*" id="file-drop-target">
       <canvas id="zoom-canvas"></canvas>
       <aside class="sidebar">
-        <pre id="debug" style="font-size: 10px"></pre>
         <div class="settings">
           <label>
             Zoom %
