--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,14 @@
                 <label for="grid-size">Grid size</label>
                 <input for="grid-size" is="range-number" />
               </div>
-              <input id="grid-size" min="0" step="1" type="range" value="0" />
+              <input
+                id="grid-size"
+                is="range-number-target"
+                min="0"
+                step="1"
+                type="range"
+                value="0"
+              />
             </div>
             <hr class="sidebar-separator" />
             <div class="setting">
@@ -44,13 +51,18 @@
                 <input for="max-colors" is="range-number" />
               </div>
               <input
+                aria-describedby="max-colors-description"
                 id="max-colors"
+                is="range-number-target"
                 max="32"
                 min="2"
                 step="1"
                 type="range"
                 value="16"
               />
+              <p id="max-colors-description" class="help-text">
+                Maximum supported colors is 32.
+              </p>
             </div>
             <hr class="sidebar-separator" />
             <div class="setting">
@@ -60,6 +72,7 @@
               </div>
               <input
                 id="dithering"
+                is="range-number-target"
                 max="1"
                 min="0"
                 step="0.01"
